--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-awesome-reveal": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "shortid": "^2.2.16",
