--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.1",
     "shortid": "^2.2.16",
     "typescript": "^4.0.3",
+    "react-query": "3.6.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
